[gd_scene load_steps=5 format=3 uid="uid://dkey2375jx4g0"]

[ext_resource type="Script" path="res://objects/nodes/file_node_3d.gd" id="1_ymoyh"]

[sub_resource type="PlaneMesh" id="PlaneMesh_drjk1"]
size = Vector2(1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_txa13"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pa8ls"]
size = Vector3(1, 0.225, 1)

[node name="3DFileNode" type="Area3D"]
script = ExtResource("1_ymoyh")

[node name="NodeMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("PlaneMesh_drjk1")
surface_material_override/0 = SubResource("StandardMaterial3D_txa13")

[node name="NodeLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.620607, 0)
text = "FileName"
font_size = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("BoxShape3D_pa8ls")

[node name="FileDialog" type="FileDialog" parent="."]
access = 2

[connection signal="input_event" from="." to="." method="_on_input_event"]
